--- a/notation.tex
+++ b/notation.tex
@@ -14,7 +14,7 @@ $v \equiv c^3$ - volume of a cubic cell.
 
 $\gamma$ - configuration of particles;
 
-$\vb r$ - coordinate in three-dimensional space;
+$\vb r$; $\vb{r}'$ - coordinate in three-dimensional space;
 
 $r \equiv \abs{\vb r}$ - absolute value of $\vb r$;
 
@@ -22,7 +22,7 @@ $\vb{r}_i$ - space coordinate of the $i$-th particle;
 
 $\vb{r}^N \equiv \vb{r}_1, ..., \vb{r}_N$ - space coordinates of particles in a configuration $\gamma$;
 
-$N$, $\abs{\gamma}$ - number of particles in a configuration $\gamma$;
+$N$; $\abs{\gamma}$ - number of particles in a configuration $\gamma$;
 
 $\Phi_{N_v}(\vb{r}_i, \vb{r}_j)$ - interaction potential between particles (the Curie-Weiss potential);
 
@@ -30,53 +30,74 @@ $J_1$ - characteristic energy for attraction;
 
 $J_2$ - characteristic energy for repulsion;
 
-$a=J_2/J_1$ - ratio between attraction and repulsion characteristic energies;
+$a \equiv J_2/J_1$ - ratio between attraction and repulsion characteristic energies;
 
-$W_{N_v}(\gamma)$, $W_{N_v}(\vb{r}^N)$ - potential energy of the interparticle interaction in $\gamma$;
+$W_{N_v}(\gamma)$; $W_{N_v}(\vb{r}^N)$ - potential energy of the interparticle interaction in $\gamma$;
 
-$I_{\Delta_l} (\vb{r})$ - indicator function for a cell $\Delta_{l}$;
+$\mathbb{I}_{\Delta_l} (\vb{r})$ - indicator function for a cell $\Delta_{l}$;
+
+$\gamma_l = \gamma \cap \Delta_l$ - a part of $\gamma$ contained in $\Delta_l$;
+
+$N_l$; $\abs{\gamma_l}$ - number of particles in $\gamma_l$;
 
 ---
 
-$\rho$ - particle density.
+$\Xi$ - grand partition function;
 
-$T$ - temperature.
+$z$ - activity;
 
-$k_{\rm B}$ - Boltzmann constant.
+$\beta$ - inverse temperature;
 
-$\beta$ - inverse temperature.
+$k_{\rm B}$ - Boltzmann constant;
 
-$\mu$ - chemical potential.
+$T$ - temperature;
 
-$z$ - activity.
+$\mu$ - chemical potential;
 
-$\Lambda$ - de Broglie thermal wavelength.
+$\Lambda$ - de Broglie thermal wavelength;
 
-$\Xi$ - grand partition function.
+$\hbar$ - Planck constant;
 
-$Z_N$ - configuration integral.
+$m$ - mass of a particle;
 
-$\Omega$ - grand potential.
+$Z_N$ - configuration integral;
 
-$P$ - pressure.
+${\rm d} \vb{r}^N \equiv {\rm d}{\vb r_1} \dotsc {\rm d}{\vb r_N}$;
 
-$S$ - entropy.
+$\langle\ldots\rangle$ - average over the grand canonical distribution;
 
-$\langle\ldots\rangle$ - average over the grand canonical distribution.
+$\Omega = -k_{\rm B}T \ln \Xi$ - grand potential;
 
-$\rho^* \equiv \frac{\langle N \rangle}{V}v$ - reduced particle density.
+---
 
 $T^* \equiv \frac{k_{\rm B}T}{J_1}$ - reduced temperature.
 
-$p \equiv \beta J_1$ - reduced inverse temperature.
+$\beta^* \equiv \beta J_1 = 1/T^*$; $p \equiv \beta J_1 = 1/T^*$ - reduced inverse temperature;
 
-$P^* \equiv \frac{Pv}{J_1}$ - reduced pressure.
+$\mu^* \equiv \frac{\mu}{J_1}$ - reduced chemical potential;
 
-$\mu^* \equiv \frac{\mu}{J_1}$ - reduced chemical potential.
+$P$ - pressure;
 
-$S^* \equiv \frac{S}{k_{\rm B} \langle N \rangle}$ - reduced entropy.
+$P^* \equiv \frac{Pv}{J_1}$ - reduced pressure;
 
-$v^* \equiv \frac{v}{\Lambda^3}$ - dimensionless cell volume.
+$\rho$ - particle density;
+
+$\rho^* \equiv \frac{\langle N \rangle}{V}v$ - reduced particle density;
+
+$S$ - entropy;
+
+$S^* \equiv \frac{S}{k_{\rm B} \langle N \rangle}$ - reduced entropy;
+
+$Q_c$ - critical value of a quantity $Q$ (may be any of listed above);
+
+$v^* \equiv {v}/{\Lambda_c^3}$ - dimensionless cell volume;
+
+---
+
+$l$, $l'$ - index for a cubic cell;
+
+$i$, $j$ - index for a particles;
+
 
 $K_n(T^*,\mu^*;y)$ - special functions.
 
@@ -87,5 +108,8 @@ $\bar{y} = \bar{y}(T^*,\mu^*)$ - function that maximizes $E(T^*,\mu^*;y)$.
 
 
 \section*{Abbreviations}
+---
 
-GPF - Grand Partition Function.
+GPF - Grand Partition Function;
+
+CW - Curie-Weiss
