update up to Poisson distribution

--- a/notation.tex
+++ b/notation.tex
@@ -94,10 +94,17 @@ $v^* \equiv {v}/{\Lambda_c^3}$ - dimensionless cell volume;
 
 ---
 
-$l$, $l'$ - index for a cubic cell;
+$\delta_{nm}$ - Kronecker $\delta$-symbol;
 
-$i$, $j$ - index for a particles;
+$l$; $l'$ - index for a cubic cell;
 
+$i$; $j$ - index for a particle;
+
+$\varrho \in \mathbb{N}_0^{N_v}$; $\varrho = (\varrho_1, \varrho_2, \ldots, \varrho_{N_{v}})$ - vector with non-negative integer components;
+
+$\nu(\gamma)=(N_1, N_2, \ldots, N_{N_v})$; $\nu(\gamma) = (\abs{\gamma_1}, \abs{\gamma_2}, \ldots, \abs{\gamma_{N_v}})$ - vector representing number of particles in each cell;
+
+---
 
 $K_n(T^*,\mu^*;y)$ - special functions.
 
