--- a/curie-weiss-notation-main.tex
+++ b/curie-weiss-notation-main.tex
@@ -49,7 +49,7 @@
 	The goals of this manuscript are to (a) summarize the known results; (b) standardize the notation; (c) properly account for quantity dimensions corresponding to physical problems; (d) account for the thermal de Broglie wavelength in the definition of the grand partition function, in order to properly account for temperature dependence while calculating the entropy; and (e) calculate the entropy.
 	
 	\section{\label{sec:model} Model}
-	Let us briefly introduce the model, the notation, and summarize the known results for the model.
+	Let us briefly introduce the model, notation, and summarize the known results for the model.
 	
 	The main results are obtained within the formalism of the grand canonical ensemble. An open system of point particles is considered in volume $V$. The total volume $V$ is divided into $N_v$ congruent cubic cells $\Delta_l$ of volume $v=c^3$ each, such that the volume $V$ is the union of all $\Delta_l$
 	\begin{equation*}
@@ -111,7 +111,7 @@
 	$$a = J_2/J_1,$$
 	and thus $a > 1.$
 	
-	\textbf{The grand partition function} (GPF) is expressed as follows~\cite[eqs.~(2.4.6) and~(2.3.13)]{HansenMcDonald13}
+	\textbf{The grand partition function} (GPF) is expressed as follows~\cite[see eqs.~(2.4.6) and~(2.3.13)]{HansenMcDonald13}
 	\begin{equation}\label{ZGR}
 		\Xi=\sum_{N=0}^{\infty}\frac{z^N}{N!}Z_N,
 	\end{equation}
@@ -201,35 +201,35 @@
 	
 	\textbf{GPF transformation}. To rewrite the integrand in~\eqref{eq:gpf1} in a more convenient form we set (cf.~\cite[eq.~(2.7)]{KKD20})
 	\begin{equation}
-		F_{N_v}(\varrho, p, \mu) = \exp[\frac{p}{2N_v}\left(\sum_{l=1}^{N_v} \varrho_l\right)^2 + \beta\mu\sum_{l=1}^{N_v} \varrho_l - \frac{a p}{2} \sum_{l=1}^{N_v} \varrho_l^2],
+		F_{N_v}(T^*, \mu^*; \varrho) = \exp[\frac{1}{2T^*N_v}\left(\sum_{l=1}^{N_v} \varrho_l\right)^2 + \frac{\mu^*}{T^*}\sum_{l=1}^{N_v} \varrho_l - \frac{a}{2T^*} \sum_{l=1}^{N_v} \varrho_l^2],
 	\end{equation}
-	where $\varrho \in \mathbb{N}_0^{N_v}$ is a vector with non-negative integer components $\varrho_l$, $l=1, 2, \ldots , N_v$, i.e. $\varrho = (\varrho_1, \varrho_2, \ldots, \varrho_{N_{v}})$.
+	where $\varrho \in \mathbb{N}_0^{N_v}$ is a vector with non-negative integer components $\varrho_l$, $l=1, 2, \ldots , N_v$, i.e. $\varrho = (\varrho_1, \varrho_2, \ldots, \varrho_{N_{v}})$. In what follows, to maintain consistency in our notation, we will express physical quantities in terms of temperature $T^*$ and chemical potential $\mu^*$.
 	
 	For $\varrho$, we substitute the vector $\nu(\gamma) \in \mathbb{N}_0^N$ with components $N_l$ (or $\abs{\gamma_l}$), which have the meaning of the number of points in a cell $\Delta_{l}$ in configuration $\gamma$, i.e. $\nu(\gamma)=(N_1, N_2, \ldots, N_{N_v})$ or $\nu(\gamma) = (\abs{\gamma_1}, \abs{\gamma_2}, \ldots, \abs{\gamma_{N_v}})$, and obtain the following expression for the GPF in~\eqref{eq:gpf1}:
 	\begin{equation}
-		\Xi = \sum_{N=0}^{\infty} \frac{\Lambda^{-3N}}{N!}\int_{V^N} F_{N_v}(\nu(\gamma),p,\mu) {\rm d} x_1 \dotsc {\rm d} x_N,
+		\Xi = \sum_{N=0}^{\infty} \frac{\Lambda^{-3N}}{N!}\int_{V^N} F_{N_v}(T^*,\mu^*;\nu(\gamma)) {\rm d} x_1 \dotsc {\rm d} x_N,
 	\end{equation}
 	which can be compared with~\cite[eq.~(2.8)]{KKD20}.
 	
-	The next step is to intorduce the Kronecker $\delta$-symbol for $n, m \in \mathbb{N}_0$ as
+	The next step is to introduce the Kronecker $\delta$-symbol for $n, m \in \mathbb{N}_0$ as
 	\begin{equation}
 		\delta_{nm} = \int_0^1 \exp[2\pi {\rm i} t (n-m)] {\rm d}t
 	\end{equation}
 	and rewrite $F_{N_v}$ as
 	\begin{equation}
-		F_{N_v}(\nu(\gamma),p,\mu) = \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(\varrho, p, \mu) 
+		F_{N_v}(T^*,\mu^*;\nu(\gamma)) = \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(T^*, \mu^*;\varrho) 
 		\int\limits_{[0,1]^{N_v}} \exp[2\pi{\rm i} \sum_{l=1}^{N_v} (\varrho_l - N_l)t_l ] {\rm d} t_1 \ldots {\rm d} t_{N_v},
 	\end{equation}
 	to arrive at (cf.~\cite[(2.9)]{KKD20})
 	\begin{eqnarray}
 		\label{eq:XiR}
-		\Xi & = &  \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(\varrho, p, \mu) 
+		\Xi & = &  \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(T^*, \mu^*; \varrho) 
 		\sum_{N=0}^{\infty} \frac{\Lambda^{-3N}}{N!} 
 		\nonumber\\
 		&& \times \int\limits_{V^N} \int\limits_{[0,1]^{N_v}} 
 		\exp[2\pi{\rm i} \sum_{l=1}^{N_v} (\varrho_l - N_l)t_l ] {\rm d} t_1 \ldots {\rm d} t_{N_v} {\rm d}x_1 \ldots {\rm d}x_N 
 		\nonumber\\
-		& = & \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(\varrho, p, \mu)
+		& = & \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(T^*, \mu^*; \varrho)
 		\int\limits_{[0,1]^{N_v}} \exp(2\pi{\rm i} \sum_{l=1}^{N_v} \varrho_l t_l) R_{N_v}(t_1, \ldots, t_{N_v}) {\rm d} t_1 \ldots {\rm d} t_{N_v}.
 	\end{eqnarray}
 	The summation over $\varrho$ is understood as
@@ -261,46 +261,46 @@
 		\nonumber\\
 		&=& \exp[\frac{v}{\Lambda^3} \sum_{l=1}^{N_v} \exp(-2\pi{\rm i} t_l)].
 	\end{eqnarray}
-	Here we used an obvious result $\int_{\Delta_l} {\rm d}x = v$. It is natural to introduce
+	Here we used an obvious result $\int_{\Delta_l} {\rm d}x = v$. It is natural to introduce dimensionless variable
 	\begin{equation}
-		v^* = \frac{v}{\Lambda^3},
+		v^* = \frac{v}{\Lambda^3_J},
 	\end{equation}
-	and write down the final expression for $R_{N_v}$
+	where $\Lambda_J = (2\pi\hbar^2/mJ_1)^{1/2}$, and, thus, write down the final expression for $R_{N_v}$
 	\begin{equation}
 		\label{eq:RNv}
-		R_{N_v}(t_1, \ldots, t_{N_v}) = \exp[v^* \sum_{l=1}^{N_v} \exp(-2\pi{\rm i} t_l)].
+		R_{N_v}(t_1, \ldots, t_{N_v}) = \exp[v^* T^{*3/2} \sum_{l=1}^{N_v} \exp(-2\pi{\rm i} t_l)].
 	\end{equation}
 	Compare this expression with the corresponding one in~\cite[p.~4]{KKD20} 
 	
 	Let us substitute~\eqref{eq:RNv} into~\eqref{eq:XiR}
 	\begin{equation}
 		\label{eq:XiIntt}
-		\Xi(p,\mu) = \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(\varrho, p, \mu) \prod\limits_{l=1}^{N_v} \int\limits_{0}^{1} \exp[2\pi{\rm i}\varrho_l t_l + v^* \exp(-2\pi{\rm i} t_l)] {\rm d} t_l.
+		\Xi(T^*,\mu^*) = \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(T^*, \mu^*; \varrho) \prod\limits_{l=1}^{N_v} \int\limits_{0}^{1} \exp[2\pi{\rm i}\varrho_l t_l + v^* T^{*3/2} \exp(-2\pi{\rm i} t_l)] {\rm d} t_l.
 	\end{equation}
 	Here, the integral gives the following result:
 	\begin{equation}
 		\label{integral1}
-		\int\limits_{0}^{1} \exp[2\pi{\rm i}\varrho_l t_l + v^* \exp(-2\pi{\rm i} t_l)] {\rm d} t_l = \frac{{(v^*)}^{\varrho_l}}{\varrho_l !}.
+		\int\limits_{0}^{1} \exp[2\pi{\rm i}\varrho_l t_l + v^* T^{*3/2} \exp(-2\pi{\rm i} t_l)] {\rm d} t_l = \frac{{(v^* T^{*3/2})}^{\varrho_l}}{\varrho_l !}.
 	\end{equation}
 	\textbf{\textcolor{Red}{NOTE:}} This integral has not been explicitly written down in any of the papers~\cite{KKD18, KKD20, KD22}, and I do not know how it is calculated. However, I have determined that this result was implicitly substituted into~\cite[(2.11)]{KKD20}. I have verified this using Maple, and it yields the result given in~\eqref{integral1}.
 	
 	The GPF takes on the form (cf.~\cite[2.11]{KKD20}):
 	\begin{eqnarray}
 		\label{eq:XiPi}
-		\Xi(p,\mu) & = & \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(\varrho, p, \mu) \prod\limits_{l=1}^{N_v} \frac{(v^*)^{\varrho_l}}{\varrho_l !}
+		\Xi(T^*,\mu^*) & = & \sum_{\varrho \in \mathbb{N}_0^{N_v}} F_{N_v}(T^*, \mu^*; \varrho) \prod\limits_{l=1}^{N_v} \frac{(v^* T^{*3/2})^{\varrho_l}}{\varrho_l !}
 		\nonumber\\
-		& = & \sum_{\varrho \in \mathbb{N}_0^{N_v}} \exp[\frac{p}{2 N_v} \left(\sum_{l=1}^{N_v} \varrho_l\right)^2] \prod\limits_{l=1}^{N_v} \pi(\varrho_l, \mu),
+		& = & \sum_{\varrho \in \mathbb{N}_0^{N_v}} \exp[\frac{1}{2 T^* N_v} \left(\sum_{l=1}^{N_v} \varrho_l\right)^2] \prod\limits_{l=1}^{N_v} \pi(T^*,\mu^*; \varrho_l),
 	\end{eqnarray}
 	where
 	\begin{equation}
 		\label{def:pirho}
-		\pi(\varrho_l, \mu) = \frac{(v^*)^{\varrho_l}}{\varrho_l !} \exp(\beta\mu\varrho_l - \frac{ap}{2}\varrho_l^2), \quad \varrho_l \in \mathbb{N}_0.
+		\pi(T^*, \mu^*; \varrho_l) = \frac{(v^* T^{*3/2})^{\varrho_l}}{\varrho_l !} \exp(\frac{\mu^*}{T^*}\varrho_l - \frac{a}{2T^*}\varrho_l^2), \quad \varrho_l \in \mathbb{N}_0.
 	\end{equation}
 	\begin{mdframed}[linecolor=black,linewidth=1pt,leftline=true]
 		In a generic form
 		\begin{equation}
 			\label{def:pin}
-			\pi(n, \mu) = \frac{(v^*)^n}{n!} \exp(\beta\mu n - \frac{ap}{2}n^2), \quad n \in \mathbb{N}_0.
+			\pi(T^*, \mu^*; n) = \frac{\left(v^* T^{*3/2}\right)^n}{n!} \exp(\frac{\mu^*}{T^*} n - \frac{a}{2T^*}n^2), \quad n \in \mathbb{N}_0.
 		\end{equation}
 	\end{mdframed}
 	
