--- a/notation.tex
+++ b/notation.tex
@@ -100,11 +100,19 @@ $l$; $l'$ - index for a cubic cell;
 
 $i$; $j$ - index for a particle;
 
+$\mathbb{N}$ - set of natural numbers;
+
+$\mathbb{N}_0$ - set of non-negative integer numbers;
+
 $\varrho \in \mathbb{N}_0^{N_v}$; $\varrho = (\varrho_1, \varrho_2, \ldots, \varrho_{N_{v}})$ - vector with non-negative integer components;
 
 $\nu(\gamma)=(N_1, N_2, \ldots, N_{N_v})$; $\nu(\gamma) = (\abs{\gamma_1}, \abs{\gamma_2}, \ldots, \abs{\gamma_{N_v}})$ - vector representing number of particles in each cell;
 
 ---
+
+$f(n; \lambda)$ - non-normalized Poisson distribution;
+
+$\lambda$ - parameter of the Poisson distribution;
 
 $K_n(T^*,\mu^*;y)$ - special functions.
 
